tests/ui/type/pattern_types/casts.stderr
error[E0605]: non-primitive cast: `(u32) is 1..` as `u32`
  --> $DIR/casts.rs:14:13
   |
LL |     let y = x as u32;
   |             ^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `(u32) is 1..` as `u64`
  --> $DIR/casts.rs:15:13
   |
LL |     let z = x as u64;
   |             ^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0308]: mismatched types
  --> $DIR/casts.rs:23:5
   |
LL | fn foo() -> u32 {
   |             --- expected `u32` because of return type
LL |     5 as pattern_type!(u32 is 1..)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `(u32) is 1..`
   |
   = note:      expected type `u32`
           found pattern type `(u32) is 1..`

error[E0308]: mismatched types
  --> $DIR/casts.rs:32:9
   |
LL | fn arms(b: bool) -> u32 {
   |                     --- expected `u32` because of return type
...
LL |         6 as pattern_type!(u32 is 1..)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `(u32) is 1..`
   |
   = note:      expected type `u32`
           found pattern type `(u32) is 1..`

error[E0308]: mismatched types
  --> $DIR/casts.rs:40:9
   |
LL | fn arms2(b: bool) -> u32 {
   |                      --- expected `u32` because of return type
LL |     if b {
LL |         7 as pattern_type!(u32 is 1..)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `(u32) is 1..`
   |
   = note:      expected type `u32`
           found pattern type `(u32) is 1..`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.
